--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: #4e342e;
-      background: url('C:/Users/Sakthivel/Desktop/NSDI/images/24.jpeg') no-repeat center center fixed;
+      background: url('https://github.com/nsdichococravings/nsdi-choco-site/blob/main/images/24.jpeg') no-repeat center center fixed;
       background-size: cover;
     }
 
