--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: #4e342e;
-      background: url('https://github.com/nsdichococravings/nsdi-choco-site/blob/main/images/24.jpeg') no-repeat center center fixed;
+      background: url('/images/24.jpeg') no-repeat center center fixed;
       background-size: cover;
     }
 
@@ -634,7 +634,7 @@
     <header>
 		<div class="navbar">
 			<div class="container">
-				<img src="C:/Users/Sakthivel/Desktop/NSDI/images/Logo.jpg" alt="NSDI Choco Cravings Logo" class="nav-logo" />
+				<img src="/images/Logo.jpg" alt="NSDI Choco Cravings Logo" class="nav-logo" />
 				<nav id="navLinks">
 				  <a href="#home">Home</a>
 				  <a href="#products">Products</a>
@@ -648,13 +648,13 @@
 		  </div>
       <div class="carousel">
         
-        <img class="background" src="C:/Users/Sakthivel/Desktop/NSDI/images/20.jpeg" alt="Brownies 3">
+        <img class="background" src="/images/20.jpeg" alt="Brownies 3">
 		
 		<!--
-		<img src="C:/Users/Sakthivel/Desktop/NSDI/images/11.jpeg" alt="Brownies 1">
-        <img src="C:/Users/Sakthivel/Desktop/NSDI/images/16.jpeg" alt="Brownies 2">
-		<img src="C:/Users/Sakthivel/Desktop/NSDI/images/15.jpeg" alt="Brownies 3">		
-		<img src="C:/Users/Sakthivel/Desktop/NSDI/images/3.jpeg" alt="Brownies 3">-->
+		<img src="/images/11.jpeg" alt="Brownies 1">
+        <img src="/images/16.jpeg" alt="Brownies 2">
+		<img src="/images/5.jpeg" alt="Brownies 3">		
+		<img src="/images/3.jpeg" alt="Brownies 3">-->
       </div>
 
       <img src="C:/Users/Sakthivel/Desktop/NSDI/images/Logo.jpg" alt="NSDI Choco Cravings Logo" class="logo">
@@ -668,7 +668,7 @@
     <!-- Product Grid Section -->
     <section class="product-grid">
       <div class="product">
-        <img src="C:/Users/Sakthivel/Desktop/NSDI/images/7.jpeg" alt="Almond Fudge">
+        <img src="/images/7.jpeg" alt="Almond Fudge">
         <h3>Almond Fudge</h3>
         <p>Rich, nutty, and gluten-free. A perfect balance of health and indulgence.</p>
 		<div class="product-card">
@@ -679,7 +679,7 @@
         <a href="#" class="order-btn" onclick="scrollToOrderForm(event)">Buy Now</a>
       </div>
       <div class="product">
-        <img src="C:/Users/Sakthivel/Desktop/NSDI/images/25.jpeg" alt="Chocolate Bliss">
+        <img src="/images/25.jpeg" alt="Chocolate Bliss">
         <h3>Chocolate Bliss</h3>
         <p>Pure cocoa goodness, less sugar. A decadent treat for any time of day.</p>
 		<div class="product-card">
