--- a/index.html
+++ b/index.html
@@ -657,10 +657,9 @@
 		<img src="/images/3.jpeg" alt="Brownies 3">-->
       </div>
 
-      <img src="C:/Users/Sakthivel/Desktop/NSDI/images/Logo.jpg" alt="NSDI Choco Cravings Logo" class="logo">
+      <img src="/images/Logo.jpg" alt="NSDI Choco Cravings Logo" class="logo">
       <section id="title-section">
 		  <h1 class="main-title">NSDI Choco Cravings</h1>
-		  <h2 class="sub-title">Brownie Treat</h2>
 	  </section>
 
 	</header>
