--- a/index.html
+++ b/index.html
@@ -635,10 +635,11 @@
 			<div class="container">
 				<img src="/images/Logo.jpg" alt="NSDI Choco Cravings Logo" class="nav-logo" />
 				<nav id="navLinks">
-				  <a href="#home">Home</a>
+				  <!-- <a href="#home">Home</a>
 				  <a href="#products">Products</a>
-				  <a href="#order">Order</a>
-				  <a href="#contact">Contact</a>
+				  <a href="#contact">Contact</a> -->
+				  <a href="#order">Order Details</a>
+				  
 				</nav>
 				<div class="hamburger" id="hamburgerMenu" onclick="toggleMenu()">
 				  ☰
@@ -738,7 +739,7 @@
 	<!-- Google Pay Button Container -->
 		<div id="googlePayButtonContainer" class="googlePayButtonContainer">
 			<div class="gpay-button" onclick="onGooglePayButtonClicked()"></div>
-		</div>
+		</div>-->
 		
         <div style="text-align: center;">
           <button type="submit" style="background: #6A1B9A; color: white; padding: 0.8rem 1.5rem; border: none; border-radius: 10px; font-size: 1rem; cursor: pointer;">Submit Order</button>
@@ -770,7 +771,6 @@
 <!-- 🛍️ Place Order / Chat -->
 <div class="floating-btn-group" id="floatingOrderBtn">
   <a href="#order" class="floating-order-btn">🛍️ Place Order</a>
-  <a href="https://wa.me/918973141898" target="_blank" class="floating-whatsapp-btn">💬 Chat</a>
 </div>
 
 
