--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,7 @@ footer.footer {
 			  </div>
 			</a>
 			
-			<a href="#fudge" class="spotlight-card-module--link--XmveN" data-name="Brownie with White Ganache Heart Shape" data-price="449">
+			<a href="#order" class="spotlight-card-module--link--XmveN" data-name="Brownie with White Ganache Heart Shape" data-price="449">
 			  <img src="/images/Product18.jpeg" alt="Fudge Fantasy" class="spotlight-card-module--image" />
 			  <div class="spotlight-card-module--content">
 				<h3 class="spotlight-card-module--title">Brownie with White Ganache Heart Shape</h3>
