--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@ footer.footer {
 .whatsapp-float {
   position: fixed;
   bottom: 20px;
-  right: 20px;
+  right: 1800px;
   z-index: 1000;
   background: #25D366;
   padding: 12px;
@@ -1110,7 +1110,7 @@ footer.footer {
 			  <div class="spotlight-card-module--content">
 				<h3 class="spotlight-card-module--title">Pregnancy Theme Ragi Brownie One KG</h3>
 				<p class="spotlight-card-module--desc">Mom-to-be's delight! Our ragi brownie is a healthier treat option, rich in nutrients and chocolatey goodness.</p>
-				<span class="price">2199</span>
+				<span class="price">₹2199</span>
 				<div class="product-btn" onclick='addToCart({ id: 14, name: "Pregnancy Theme Ragi Brownie One KG", price: 2199, quantity: 1,image:"/images/Product14.jpeg" })'>Add to Cart</div>
 				
 			  </div>
