--- a/orderForm.html
+++ b/orderForm.html
@@ -26,7 +26,7 @@
 			  <label for="phone">Phone Number</label>
 			</div>
 			<div class="form-group">
-			  <textarea   name="product" id="product" rows="4" readonly style="width:100%;padding:10px;border-radius:8px;" required oninput="updatePreview()" ></textarea>
+			  <textarea   name="product" id="product" rows="4" readonly style="width:100%;padding:10px;border-radius:8px;" oninput="updatePreview()" ></textarea>
 			  <label for="product">Product Details</label>
 			</div>
 			<div class="form-group">
