--- a/orderForm.html
+++ b/orderForm.html
@@ -47,7 +47,7 @@ q			<input type="number" name="quantity" id="quantity" min="1" required oninput=
 			  <textarea name="message" id="message" rows="3" oninput="updatePreview()"></textarea>
 			  <label for="message">Special Instructions</label>
 			</div>
-			<button id="payBtn" style="display:none" class="pay-now-btn">Pay with Razorpay</button>
+			<button class="payment-btn" id="payBtn" class="pay-now-btn">Pay with Razorpay</button>
 			<div class="gpay-button-wrapper">
 			  <div class="gpay-button" onclick="onGooglePayButtonClicked()"></div>
 			</div>
