--- a/orderForm.html
+++ b/orderForm.html
@@ -74,7 +74,7 @@ q			<input type="number" name="quantity" id="quantity" min="1" required oninput=
   <script src="orderForm.js"></script>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
  <script>
-  document.getElementById("payBtn").addEventListener("click", function(e) {
+  document.getElementById("payment-btn").addEventListener("click", function(e) {
     const cart = JSON.parse(localStorage.getItem("cart") || "[]");
     if (cart.length === 0) {
       alert("Your cart is empty");
