--- a/cart.html
+++ b/cart.html
@@ -18,8 +18,7 @@
     <div class="total-price">
       <p style ="color:black">Total: ₹<span id="totalPrice">0</span></p>
     </div>
-	<a href="orderForm.html" onclick="proceedToCheckout()">
-    <button  class="submit-btn">Proceed to Checkout</button>
+	    <button onclick="proceedToCheckout()" class="proceed-checkout-btn">Proceed to Checkout</button>
   </div>
 </main>
 
