--- a/index.html
+++ b/index.html
@@ -1295,7 +1295,7 @@ font-size: 14px;
 
 <img src="https://script.google.com/macros/s/AKfycbygjMRPzOZmMJYUcDweW7IltovN7bWlfo2jVvdsDaeT2sgJKjRfwsqKUrbBpjj9ZCAGjQ/exec?email=${data.email}" width="1" height="1" style="display:none;" />
 
-
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
 <script>
