--- a/index.html
+++ b/index.html
@@ -1216,13 +1216,13 @@ font-size: 14px;
 				<div class="product-btn" onclick='addToCart({ id: 21, name: "Butter Bun Pack of 9", price: 70, quantity: 1,image:"/images/Product22.jpg" })'>Add to Cart</div>
 			  </div>
 			</a>
-			<a class="spotlight-card-module--link--XmveN"  data-name="Butter Bun" data-price="1270">
+			<a class="spotlight-card-module--link--XmveN"  data-name="Birthday Brownie loaded with Cherry, Oreo and Nuts Half KG" data-price="1270">
 			  <img src="/images/Product23.jpg" alt="Butter Bun" class="spotlight-card-module--image" />
 			  <div class="spotlight-card-module--content">
 				<h3 class="spotlight-card-module--title">Birthday Brownie loaded with Cherry, Oreo and Nuts Half KG</h3>
 				<p class="spotlight-card-module--desc">Get your fix! Our brownie is loaded with crunchy nuts and sweet frutz, adding a delicious texture and flavor twist to our rich, fudgy chocolate.!</p>
 				<span class="price">₹1270</span>
-				<div class="product-btn" onclick='addToCart({ id: 23, name: "Butter Bun Pack of 9", price: 70, quantity: 1,image:"/images/Product23.jpg" })'>Add to Cart</div>
+				<div class="product-btn" onclick='addToCart({ id: 23, name: "Birthday Brownie loaded with Cherry, Oreo and Nuts Half KG", price: 1270, quantity: 1,image:"/images/Product23.jpg" })'>Add to Cart</div>
 			  </div>
 			</a>
 		</div>
