--- a/cart.html
+++ b/cart.html
@@ -9,6 +9,13 @@
 <body class="cart-page">
   <header class="header">
     <h1>🛒</h1><p class="subTittle">Happy to serve fresh..!</p>
+	  <a href="index.html" class="back-home-btn">
+	  <svg xmlns="http://www.w3.org/2000/svg" class="home-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+		<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+		  d="M3 10l9-7 9 7v8a2 2 0 01-2 2h-4a2 2 0 01-2-2v-4H9v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-8z" />
+	  </svg>
+	  Back to Home
+	</a>
   </header>
 
   <main>
