--- a/index.html
+++ b/index.html
@@ -1226,12 +1226,12 @@ font-size: 14px;
 			  </div>
 			</a>
 			<a class="spotlight-card-module--link--XmveN" data-name="Miniature Birthday Brownie with Nuts & Strawberry and Ferrero" data-price="825">
-			  <img src="/images/Product24.jpeg" alt="Classic Choco" class="spotlight-card-module--image" />
+			  <img src="/images/Product24.jpg" alt="Classic Choco" class="spotlight-card-module--image" />
 			  <div class="spotlight-card-module--content">
 				<h3 class="spotlight-card-module--title">Miniature Birthday Brownie with Nuts & Strawbery/Cherry and Ferrero</h3>
 				<p class="spotlight-card-module--desc">Birthday bliss! Ferrero meets strawberry and nuts in our rich, fudgy brownie - a match made in dessert heaven.</p>
 				<span class="price">₹825</span>
-				<div class="product-btn" onclick='addToCart({ id: 24, name: "Miniature Birthday Brownie with Nuts & Strawbery/Cherry and Ferrero", price: 825, quantity: 1,image:"/images/Product24.jpeg" })'>Add to Cart</div>
+				<div class="product-btn" onclick='addToCart({ id: 24, name: "Miniature Birthday Brownie with Nuts & Strawbery/Cherry and Ferrero", price: 825, quantity: 1,image:"/images/Product24.jpg" })'>Add to Cart</div>
 			  </div>
 			</a>
 		</div>
