--- a/orderForm.html
+++ b/orderForm.html
@@ -40,11 +40,11 @@
 			  <textarea   name="product" id="product" rows="4" readonly style="width:100%;padding:10px;border-radius:8px;" oninput="updatePreview()" ></textarea>
 			  <label for="product">Product Details</label>
 			</div>
-			<div class="form-group">
+			<!--<div class="form-group">
 			  <input type="text" name="price" id="price" required oninput="updatePreview()" />
 			  <label for="product">Total Price</label>
 			</div>
-			<!--
+			
 			<div class="form-group">
 			
 q			<input type="number" name="quantity" id="quantity" min="1" required oninput="updatePreview()" />
