--- a/orderForm.html
+++ b/orderForm.html
@@ -69,7 +69,7 @@ q			<input type="number" name="quantity" id="quantity" min="1" required oninput=
 			  <label for="offerCode" class="promo-label">Have an offer code?</label>
 			  <div class="promo-input-group">
 				  <input type="text" id="offerCode"  placeholder="Enter code" />
-				  <button onclick="applyOffer()">Apply</button>
+				  <button type="button" onclick="applyOffer()">Apply</button>
 			  </div>
 			  <p id="offerMessage"  class="promo-message"></p>
 			</div>
