--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!-- Meta Description -->
+	<!-- Meta Keywords (optional, not used much by Google anymore) -->
+<meta name="keywords" content="Brwonie,Dessert,Healthy Brownie,Premium Brownie,Rich in taste,Dessert, Delight Dessert,Homemade brownie,fudgy brownie,Couverture,Belgium,Begian Chocolate,Chocolate">
+<meta name="description" content="we’re passionate about baking brownies that are both indulgent and guilt-free. 
+	  We use only premium, locally sourced ingredients—free from artificial preservatives and additives">
+	  <a href="https://instagram.com/nsdi.chococravings" target="_blank" title="Instagram">
+	 <meta property="og:type" content="https://nsdichococravings.netlify.app/" />
    
   <script>
   
@@ -1223,15 +1230,6 @@ font-size: 14px;
 				<p class="spotlight-card-module--desc">Get your fix! Our brownie is loaded with crunchy nuts and sweet frutz, adding a delicious texture and flavor twist to our rich, fudgy chocolate.!</p>
 				<span class="price">₹1270</span>
 				<div class="product-btn" onclick='addToCart({ id: 23, name: "Birthday Brownie loaded with Cherry, Oreo and Nuts Half KG", price: 1270, quantity: 1,image:"/images/Product23.jpg" })'>Add to Cart</div>
-			  </div>
-			</a>
-			<a class="spotlight-card-module--link--XmveN" data-name="Miniature Birthday Brownie with Nuts & Strawberry and Ferrero" data-price="825">
-			  <img src="/images/Product24.jpg" alt="Classic Choco" class="spotlight-card-module--image" />
-			  <div class="spotlight-card-module--content">
-				<h3 class="spotlight-card-module--title">Miniature Birthday Brownie with Nuts & Strawbery/Cherry and Ferrero</h3>
-				<p class="spotlight-card-module--desc">Birthday bliss! Ferrero meets strawberry and nuts in our rich, fudgy brownie - a match made in dessert heaven.</p>
-				<span class="price">₹825</span>
-				<div class="product-btn" onclick='addToCart({ id: 24, name: "Miniature Birthday Brownie with Nuts & Strawbery/Cherry and Ferrero", price: 825, quantity: 1,image:"/images/Product24.jpg" })'>Add to Cart</div>
 			  </div>
 			</a>
 		</div>
