--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <!-- Meta Description -->
 	<!-- Meta Keywords (optional, not used much by Google anymore) -->
-<meta name="keywords" content="Brwonie,Dessert,Healthy Brownie,Premium Brownie,Rich in taste,Dessert, Delight Dessert,Homemade brownie,fudgy brownie,Couverture,Belgium,Begian Chocolate,Chocolate">
+<meta name="keywords" content="Brownie delivery in Salem,Handmade brownies in Salem,Best brownies near me,Brwonie,Dessert,Healthy Brownie,Premium Brownie,Rich in taste,Dessert, Delight Dessert,Homemade brownie,fudgy brownie,Couverture,Belgium,Begian Chocolate,Chocolate">
 <meta name="description" content="we’re passionate about baking brownies that are both indulgent and guilt-free. 
 	  We use only premium, locally sourced ingredients—free from artificial preservatives and additives">
 	  <a href="https://instagram.com/nsdi.chococravings" target="_blank" title="Instagram">
