--- a/orderForm.html
+++ b/orderForm.html
@@ -121,7 +121,7 @@ q			<input type="number" name="quantity" id="quantity" min="1" required oninput=
       description: "Order Payment",
       image: "https://your-logo-url.com/logo.png", // Optional logo
       handler: function (response) {
-		//submitForm();
+		submitForm();
 		Swal.fire({
 				  title: '🎉 Payment Successful!',
 				  html: `<p>Your payment was completed successfully.</p>
